<resources>
    <string name="app_name">Mvvm_auth</string>
    <string name="criar_user">Criar user</string>
    <string name="new_user">Novo usuário</string>
    <string name="login">Login</string>
    <string name="autenticar">Autenticar</string>
    <string name="cirar_uma_nova_conta_aqui">Cirar uma nova conta! Aqui</string>
    <string name="save_button">save</string>
    <string name="price">Price</string>
    <string name="name">Name</string>
    <string name="new_bill">New bill</string>
    <string name="title_activity_detail">DetailActivity</string>
    <string name="tab_text_1">Tab 1</string>
    <string name="tab_text_2">Tab 2</string>
</resources>